2009-12-14  vadim  <vadim@vk.crocodile.org>

	* src/res/configlets/linux24/automatic_rules: Generation of the
	automatic rules (matching ESTABLISHED and INVALID states,
	backup ssh access and others) now uses configlet. Fixes #883

	* src/res/configlets/linux24/automatic_rules: generated script can
	now include automatic rules to match IPv6 neighbor discovery ICMP6
	packets. This is controlled by a checkbox in the iptables
	"advanced" settings dialog and is off by default. Fixes #878

	* PrefsDialog.cpp (PrefsDialog::accept): Added a place in the
	global Preferences dialog for options specific for different
	object types. First parameters include options for DNSName and
	AddressTable to let the user decide if the newly created objects
	of these types should be automatically configured with "Compile
	Time" or "Run Time" mode. Also, added an option that makes DNSName
	object editor copy the name of the object into the DNS record
	input field when new object is created or whenever the name
	changes.  This is useful when the user does not want to keep
	object name and dns record different because they need to enter
	the name only once.

	* DNSNameDialog.cpp (DNSNameDialog::applyChanges): If global
	Preferences option "Use DNS Name object name for the DNS record"
	is turned on, copy the name into the record on every name change.
	Fixes #866

2009-12-11  vadim  <vadim@vk.crocodile.org>

	* GroupObjectDialog.cpp (GroupObjectDialog::newObject):
	Implemented feature request #2245537 "Add service object to
	service groups directly from groups". Group object dialog now has
	a button that shows a menu when clicked, this menu allows the user
	to create new object and add it to the group in one operation.
	This fixes #119

	* ObjectManipulator::addNewObjectMenuItem: fixes #850 Redesigned
	methods used to create "new object" menu and call functions that
	create new objects to be able to build menus with limited sets
	of new object types.
