@@ -5,8 +5,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>745</width>
-    <height>575</height>
+    <width>875</width>
+    <height>619</height>
    </rect>
   </property>
   <property name="sizePolicy" >
@@ -59,9 +59,9 @@
       </sizepolicy>
      </property>
      <property name="currentIndex" >
-      <number>0</number>
+      <number>1</number>
      </property>
-     <widget class="QWidget" name="page" >
+     <widget class="QWidget" name="select_firewalls_page" >
       <property name="sizePolicy" >
        <sizepolicy vsizetype="MinimumExpanding" hsizetype="MinimumExpanding" >
         <horstretch>0</horstretch>
@@ -73,7 +73,7 @@
       </property>
       <layout class="QGridLayout" >
        <property name="margin" >
-        <number>1</number>
+        <number>0</number>
        </property>
        <item row="0" column="0" >
         <layout class="QVBoxLayout" >
@@ -105,53 +105,6 @@
               </property>
               <property name="wordWrap" >
                <bool>false</bool>
-              </property>
-             </widget>
-            </item>
-           </layout>
-          </widget>
-         </item>
-         <item>
-          <widget class="QFrame" name="batchInstFlagFrame" >
-           <property name="sizePolicy" >
-            <sizepolicy vsizetype="Preferred" hsizetype="MinimumExpanding" >
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="frameShape" >
-            <enum>QFrame::Box</enum>
-           </property>
-           <property name="frameShadow" >
-            <enum>QFrame::Plain</enum>
-           </property>
-           <layout class="QGridLayout" >
-            <property name="margin" >
-             <number>11</number>
-            </property>
-            <item row="1" column="0" >
-             <widget class="QCheckBox" name="batchInstall" >
-              <property name="sizePolicy" >
-               <sizepolicy vsizetype="Fixed" hsizetype="Minimum" >
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
-              </property>
-              <property name="text" >
-               <string>Perform batch install</string>
-              </property>
-             </widget>
-            </item>
-            <item row="0" column="0" >
-             <widget class="QLabel" name="textLabel2" >
-              <property name="text" >
-               <string>Check this option if you want to install all selected firewalls automatically. This only works if you use the same user name and password to authenticate to all these firewalls. </string>
-              </property>
-              <property name="alignment" >
-               <set>Qt::AlignVCenter</set>
-              </property>
-              <property name="wordWrap" >
-               <bool>true</bool>
               </property>
              </widget>
             </item>
@@ -265,8 +218,11 @@
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="page_2" >
+     <widget class="QWidget" name="progress_page" >
       <layout class="QHBoxLayout" >
+       <property name="margin" >
+        <number>0</number>
+       </property>
        <item>
         <widget class="QFrame" name="frame18_2" >
          <property name="frameShape" >
@@ -304,7 +260,16 @@
           </item>
           <item rowspan="2" row="0" column="0" colspan="2" >
            <widget class="QTreeWidget" name="fwWorkList" >
+            <property name="alternatingRowColors" >
+             <bool>true</bool>
+            </property>
             <property name="itemsExpandable" >
+             <bool>false</bool>
+            </property>
+            <property name="sortingEnabled" >
+             <bool>true</bool>
+            </property>
+            <property name="headerHidden" >
              <bool>false</bool>
             </property>
             <column>
@@ -336,13 +301,10 @@
          <property name="frameShadow" >
           <enum>QFrame::Plain</enum>
          </property>
-         <layout class="QVBoxLayout" >
-          <property name="margin" >
-           <number>11</number>
-          </property>
-          <item>
-           <layout class="QHBoxLayout" >
-            <item>
+         <layout class="QGridLayout" name="gridLayout_4" >
+          <item row="0" column="0" >
+           <layout class="QGridLayout" name="gridLayout_3" >
+            <item row="0" column="0" >
              <widget class="QLabel" name="textLabel1" >
               <property name="text" >
                <string>Firewalls:</string>
@@ -352,7 +314,7 @@
               </property>
              </widget>
             </item>
-            <item>
+            <item row="0" column="1" >
              <widget class="QLabel" name="fwMCLabel" >
               <property name="sizePolicy" >
                <sizepolicy vsizetype="Preferred" hsizetype="Expanding" >
@@ -374,18 +336,20 @@
               </property>
              </widget>
             </item>
-           </layout>
-          </item>
-          <item>
-           <widget class="QProgressBar" name="compFirewallProgress" >
-            <property name="orientation" >
-             <enum>Qt::Horizontal</enum>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <layout class="QHBoxLayout" >
-            <item>
+            <item row="0" column="2" >
+             <widget class="QProgressBar" name="compFirewallProgress" >
+              <property name="minimumSize" >
+               <size>
+                <width>300</width>
+                <height>0</height>
+               </size>
+              </property>
+              <property name="orientation" >
+               <enum>Qt::Horizontal</enum>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="0" colspan="2" >
              <widget class="QLabel" name="infoMCLabel" >
               <property name="sizePolicy" >
                <sizepolicy vsizetype="Preferred" hsizetype="Expanding" >
@@ -407,62 +371,22 @@
               </property>
              </widget>
             </item>
-           </layout>
-          </item>
-          <item>
-           <widget class="QProgressBar" name="compProgress" >
-            <property name="orientation" >
-             <enum>Qt::Horizontal</enum>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <layout class="QHBoxLayout" >
-            <item>
-             <spacer>
-              <property name="orientation" >
-               <enum>Qt::Horizontal</enum>
-              </property>
-              <property name="sizeType" >
-               <enum>QSizePolicy::Expanding</enum>
-              </property>
-              <property name="sizeHint" stdset="0" >
+            <item row="1" column="2" >
+             <widget class="QProgressBar" name="compProgress" >
+              <property name="minimumSize" >
                <size>
-                <width>180</width>
-                <height>20</height>
+                <width>300</width>
+                <height>0</height>
                </size>
               </property>
-             </spacer>
-            </item>
-            <item>
-             <widget class="QPushButton" name="detailsButton" >
-              <property name="text" >
-               <string>Show Details</string>
-              </property>
-              <property name="autoDefault" >
-               <bool>false</bool>
+              <property name="orientation" >
+               <enum>Qt::Horizontal</enum>
               </property>
              </widget>
             </item>
-            <item>
-             <spacer>
-              <property name="orientation" >
-               <enum>Qt::Horizontal</enum>
-              </property>
-              <property name="sizeType" >
-               <enum>QSizePolicy::Expanding</enum>
-              </property>
-              <property name="sizeHint" stdset="0" >
-               <size>
-                <width>101</width>
-                <height>20</height>
-               </size>
-              </property>
-             </spacer>
-            </item>
            </layout>
           </item>
-          <item>
+          <item row="1" column="0" >
            <layout class="QHBoxLayout" >
             <item>
              <widget class="QGroupBox" name="detailMCframe" >
@@ -523,6 +447,53 @@
              </spacer>
             </item>
            </layout>
+          </item>
+          <item row="2" column="0" >
+           <widget class="QFrame" name="batchInstFlagFrame" >
+            <property name="sizePolicy" >
+             <sizepolicy vsizetype="Preferred" hsizetype="MinimumExpanding" >
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="frameShape" >
+             <enum>QFrame::NoFrame</enum>
+            </property>
+            <property name="frameShadow" >
+             <enum>QFrame::Plain</enum>
+            </property>
+            <layout class="QGridLayout" name="_2" >
+             <property name="margin" >
+              <number>0</number>
+             </property>
+             <item row="1" column="0" >
+              <widget class="QCheckBox" name="batchInstall" >
+               <property name="sizePolicy" >
+                <sizepolicy vsizetype="Fixed" hsizetype="Minimum" >
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
+               <property name="text" >
+                <string>Perform batch install</string>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="0" >
+              <widget class="QLabel" name="textLabel2" >
+               <property name="text" >
+                <string>Check this option if you want to install all selected firewalls automatically. This only works if you use the same user name and password to authenticate to all these firewalls. </string>
+               </property>
+               <property name="alignment" >
+                <set>Qt::AlignVCenter</set>
+               </property>
+               <property name="wordWrap" >
+                <bool>true</bool>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </widget>
           </item>
          </layout>
         </widget>
@@ -639,22 +610,6 @@
  <layoutdefault spacing="6" margin="11" />
  <resources/>
  <connections>
-  <connection>
-   <sender>detailsButton</sender>
-   <signal>clicked(bool)</signal>
-   <receiver>instDialog_q</receiver>
-   <slot>togleDetailMC()</slot>
-   <hints>
-    <hint type="sourcelabel" >
-     <x>509</x>
-     <y>170</y>
-    </hint>
-    <hint type="destinationlabel" >
-     <x>20</x>
-     <y>20</y>
-    </hint>
-   </hints>
-  </connection>
   <connection>
    <sender>saveMCLogButton</sender>
    <signal>clicked(bool)</signal>
