@@ -209,6 +209,12 @@
   they need to enter the name only once.
 </p>
 
+<p>
+  <b>"Batch install"</b> checkbox moved to the page that shows
+  compiler progress so the user can decide to do batch install right
+  before they perform installations instead of doing this before they
+  start compile.
+</p>
 
 <a name="cluster"></a>
 <h2>Support for High Availability configurations</h2>
